...
                    crossAxisAlignment: CrossAxisAlignment.start,
                    children: [

                      // Top Row
                      Row(
                        children: [
                          IconButton(key: const Key("close-button"), onPressed: () => Navigator.pop(context), icon: Icon(Icons.close)),
                          const Expanded(child: SizedBox()),
                          Expanded(
                            child: Text(key: const Key("header"), context.lang.lblAppBarAddExpense, textAlign: TextAlign.center, style: TextStyle(fontFamily: Constants.fontTitle,
                                fontSize: R.sp(16), fontWeight: FontWeight.bold, color: HexColor.fromHex(Constants.darkBgColor))),
                          ),
                          const Expanded(child: SizedBox()),
...
                      if (widget.expenseModel == null)
                      SizedBox(height: R.h(70)),
                      if (widget.expenseModel == null)
                      SizedBox(
                        width: double.infinity,
                        child: ElevatedButton.icon(
                            key: const Key('add-expense-button'),
                            onPressed: _handleAddExpense,
                            icon: Icon(Icons.arrow_forward_rounded, size: R.w(20)),
                            style: ElevatedButton.styleFrom(
                                padding: EdgeInsets.symmetric(vertical: R.h(10), horizontal: R.w(30)),
                                backgroundColor: HexColor.fromHex(Constants.primaryColor),
                                foregroundColor: HexColor.fromHex(Constants.warmWhiteColor),
...
