...
              style: IconButton.styleFrom(backgroundColor: HexColor.fromHex(Constants.lightGrayColor)),
              onPressed: () => Navigator.pushNamed(context, Constants.settings)),
          ],
        ),
      ),
      body: Column(
        key: const Key("home-body"),
        crossAxisAlignment: CrossAxisAlignment.start,
        children: [

          // Top Summary/Stats Section
          Consumer<HomeViewModel>(
              builder: (context, homeViewModel, child) {
...
